package calculator;

import data.Equation;
import data.Expression;

public class Calculator  {

    public Calculator() {}

    /**
     *
     * @param expression
     * @return
     */
    public Equation evaluate (Expression expression) {
        return null;
    }
}
